--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -540,9 +540,9 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3.3.0
         with:
-          version: v0.9.1
+          version: v0.13.1
           endpoint: builders
           platforms: linux/arm64,linux/amd64
 
@@ -607,10 +607,10 @@ jobs:
           echo IMAGE_VERSION: ${{ needs.setup_variables.outputs.github-sha }} >> $GITHUB_STEP_SUMMARY
           echo "IMAGE TAGS : ${{ steps.meta.outputs.tags }} >> $GITHUB_STEP_SUMMARY"
 
-      - name: ifcheck
-        if: inputs.EnableSentryRelease && needs.setup_variables.outputs.environment == 'prod'
-        run: |
-          echo just a check
+      # - name: ifcheck
+      #   if: inputs.EnableSentryRelease && needs.setup_variables.outputs.environment == 'prod'
+      #   run: |
+      #     echo just a check
 
   sentry-release:
     timeout-minutes: 5
