--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -390,9 +390,9 @@ jobs:
           alias python=python2
       - name: node
         run: |
-          npm install -include=dev
+          yarn install -include=dev
           echo **** npm run build
-          npm run build
+          yarn run build
 
       - name: karma tests
         if: true && !inputs.DisableKarmaTests
