--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -544,7 +544,7 @@ jobs:
         with:
           version: v0.9.1
           endpoint: builders
-          platforms: linux/arm64,linux/amd64
+          platforms: linux/amd64
 
       - name: Docker meta
         id: meta
@@ -592,7 +592,7 @@ jobs:
             SENTRY_ORG=${{inputs.SentryOrganisation}}
             SENTRY_AUTH_TOKEN=${{secrets.sentry-auth-token}}
             SENTRY_PROJECT=${{inputs.SentryProjectName}}
-          platforms: linux/arm64,linux/amd64
+          platforms: linux/amd64
           context: .
           allow: network.host
           network: host
