--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -544,7 +544,7 @@ jobs:
         with:
           version: v0.13.1
           endpoint: builders
-          platforms: linux/arm64,linux/amd64
+          platforms: linux/amd64
 
       - name: Docker meta
         id: meta
