added postgresql in behat

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -39,6 +39,11 @@ on:
         type: string
         required: false
         default: "3.13.0"
+      BehatUsePostgresql:
+        type: boolean
+        required: false
+        default: false
+        description: "use postgresql in behat tests"
       PhpVersion:
         required: false
         type: string
@@ -421,6 +426,7 @@ jobs:
     needs: setup_variables
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
+      DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/${{ steps.imagetag.outputs.app }}"
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
@@ -429,7 +435,10 @@ jobs:
         with:
           token: ${{ secrets.numa-numa-token }}
           submodules: recursive
-
+      - name: start mysql and redis
+        if: inputs.BehatUsePostgresql
+        run: |
+          docker run --rm --name postgres-db -p 5432:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=${{ steps.imagetag.outputs.app }} -d postgres:13.13
       - uses: shivammathur/setup-php@2.30.2
         if: inputs.ApplicationLanguage == 'php'
         with:
