--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -426,7 +426,7 @@ jobs:
     needs: setup_variables
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
-      DATABASE_URL: ${{join(needs.setup_variables.outputs.app, 'postgresql://postgres:postgres@localhost:5432/\n')}}
+      DATABASE_URL: ${{join(needs.setup_variables.outputs.app, 'postgresql://postgres:postgres@postgres:5432/\n')}}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
