--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -102,6 +102,10 @@ on:
         type: string
         required: false
         default: "15.12.0"
+      DisableNodeBuild:
+        type: boolean
+        required: false
+        default: false
       DisableKarmaTests:
         type: boolean
         required: false
@@ -392,10 +396,14 @@ jobs:
         if: inputs.Python2AsPython
         run: |
           alias python=python2
-      - name: node
+
+      - name: node install
         run: |
           npm install -include=dev
-          echo **** npm run build
+
+      - name: node build
+        if: true && !inputs.DisableNodeBuild
+        run: |
           npm run build
 
       - name: karma tests
