--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -470,7 +470,7 @@ jobs:
         run: ./vendor/bin/behat features
 
       - name: and test it
-        if: inputs.BehatUsePostgresql
+        if: ${{ inputs.BehatUsePostgresql }}
         uses: php-actions/behat@v1
         with:
           version: ${{ inputs.BehatVersion }}
