--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       targets:
         required: false
-        default: '["dev"]'
+        default: "[\"project\"]"
         type: string
     secrets:
       token:
