EZR-12578 Testing Json Functionality

--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       targets:
         required: false
-        default: "[\"project\"]"
+        default: "['project']"
         type: string
     secrets:
       token:
