--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -426,8 +426,7 @@ jobs:
     needs: setup_variables
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
-      #DATABASE_URL: ${{join(needs.setup_variables.outputs.app, 'postgresql://postgres:postgres@postgres:5432/\n')}}
-      DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/filter?driverOptions[schema]=public'
+      DATABASE_URL: ${{join(needs.setup_variables.outputs.app, 'postgresql://postgres:postgres@postgres:5432/\n')}}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
@@ -466,6 +465,8 @@ jobs:
         run: whoami && mkdir www && sudo php -d error_reporting="E_ALL & ~E_NOTICE & ~E_DEPRECATED" -S 0.0.0.0:8000 -t www public/index.php &
       
       - name: test
+        env:
+          DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/filter?driverOptions[schema]=public'
         if: ${{ inputs.BehatUsePostgresql }}
         run: ./vendor/bin/behat features
 
