EZR-12578 Testing Json Functionality

--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -65,6 +65,7 @@ jobs:
       - name: print all outputs
         run: |
           echo runners: ${{ steps.runners.outputs.runners }} >> $GITHUB_STEP_SUMMARY
+          echo testing: ${{ fromJson(steps.set-matrix.outputs.matrix) }} >> $GITHUB_STEP_SUMMARY
           echo matrix: ${{ steps.set-matrix.outputs.matrix }} >> $GITHUB_STEP_SUMMARY
 #          echo environment: ${{ steps.environment.outputs.environment }} >> $GITHUB_STEP_SUMMARY
 #          echo imagetag: ${{ steps.imagetag.outputs.imagetag }} >> $GITHUB_STEP_SUMMARY
@@ -75,7 +76,7 @@ jobs:
   build-image:
     strategy:
       matrix:
-        target: ${{ fromJSON(github.event.inputs.targets)}}
+        target: ${{ fromJSON(needs.setup_variables.outputs.matrix)}}
     timeout-minutes: 30
     needs: [ "setup_variables"]
     if: |
