--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Set up correct matrix format
         id: set-matrix
         run: |
-          matrix_value=\$(jq -cr '@json' <<< '${{ inputs.targets }}')
+          matrix_value=$(jq -cr '@json' <<< '${{ inputs.targets }}')
           echo "matrix=$matrix_value" >> $GITHUB_OUTPUT
           echo "Generated matrix: $matrix_value"
 #          echo "matrix=\$(jq -cr '@json' <<< '${{ inputs.targets }}')" >> $GITHUB_OUTPUT
