--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       targets:
         required: false
-        default: '["dev", "dev-xdebug"]'
+        default: '["dev"]'
         type: string
     secrets:
       token:
@@ -63,7 +63,6 @@ jobs:
           matrix_value=$(jq -cr '@json' <<< '${{ inputs.targets }}')
           echo "matrix=$matrix_value" >> $GITHUB_OUTPUT
           echo "Generated matrix: $matrix_value"
-#          echo "matrix=\$(jq -cr '@json' <<< '${{ inputs.targets }}')" >> $GITHUB_OUTPUT
 
       - name: print all outputs
         run: |
