--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -111,8 +111,7 @@ jobs:
     if: |
       always() && 
       !contains(needs.*.result, 'failure') &&
-      !contains(needs.*.result, 'canceled') &&
-      needs.setup_variables.outputs.rebuildManifest == 'true'
+      !contains(needs.*.result, 'canceled')
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
