--- a/.github/workflows/cicd-dev.yaml
+++ b/.github/workflows/cicd-dev.yaml
@@ -11,6 +11,11 @@ on:
         type: string
         default: "linux/arm64"
         required: false
+      ForceBuild:
+        description: 'To distinguish workflow_call from regular manual run'
+        type: boolean
+        required: false
+        default: false
     secrets:
       token:
         required: true
@@ -100,7 +105,7 @@ jobs:
           echo dockerfileChanged: ${{ steps.did-docker-change.outputs.any_changed }} >> $GITHUB_STEP_SUMMARY
           echo environment: ${{ steps.variables.outputs.environment }} >> $GITHUB_STEP_SUMMARY
           echo app: ${{ steps.variables.outputs.app }} >> $GITHUB_STEP_SUMMARY
-
+          echo github ${{ toJSON(github) }} >> $GITHUB_STEP_SUMMARY
 
   build-image:
     strategy:
@@ -108,8 +113,9 @@ jobs:
         target: ${{ fromJSON(needs.setup_variables.outputs.matrix)}}
     timeout-minutes: 30
     needs: [ "setup_variables"]
+#    WORKING, DISABLE FOR NOW!
     if: |
-      always() && 
+      !always() && 
       !contains(needs.*.result, 'failure') &&
       !contains(needs.*.result, 'canceled')
     env:
