--- a/.github/workflows/cicd-cleanup-cache.yaml
+++ b/.github/workflows/cicd-cleanup-cache.yaml
@@ -12,7 +12,19 @@ jobs:
     steps:
       - name: Cleanup
         run: |
-          echo "INIT"
+           gh extension install actions/gh-actions-cache
+           
+           echo "Fetching list of cache key"
+           cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1 )
+           
+           ## Setting this to not fail the workflow while deleting cache keys.
+           set +e
+           echo "Deleting caches..."
+           for cacheKey in $cacheKeysForPR
+           do
+               gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
+           done
+           echo "Done"
         env:
           GH_TOKEN: ${{ secrets.numa-numa-token }}
           REPO: ${{ github.repository }}
