--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -310,6 +310,10 @@ jobs:
           sudo apt update && sudo apt install -y mysql-client
           sleep 15
           mysql -h 127.0.0.1 -proot -u root zebra-tests < database/schema/mysql-schema.dump
+      - name: elasticsearch 7
+        if: ${{ needs.setup_variables.outputs.app == 'report-service' }}
+        run: |
+          docker run -d --name es -v -p 9200:9200 -p 9300:9300 elasticsearch:7.17.2 --logger.discovery=DEBUG --script.index=true --script.indexed=on
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
