--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -313,7 +313,7 @@ jobs:
       - name: elasticsearch 7
         if: ${{ needs.setup_variables.outputs.app == 'report-service' }}
         run: |
-          docker run -d --name es -p 9200:9200 -p 9300:9300 elasticsearch:7.17.2 --logger.discovery=DEBUG --script.index=true --script.indexed=on
+          docker run -d --name es -p 9200:9200 -p 9300:9300 elasticsearch:7.17.2 --logger.discovery=DEBUG
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
