Elasticsearch 7 for Report Service

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -314,6 +314,9 @@ jobs:
         if: ${{ needs.setup_variables.outputs.app == 'report-service' }}
         run: |
           docker run -d --name es -p 9200:9200 -p 9300:9300 elasticsearch:7.17.2 --logger.discovery=DEBUG
+          sleep 15
+          echo "waiting for elasticsearch"
+          until curl -s http://localhost:9200/_cluster/health?wait_for_status=yellow
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
