--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -313,7 +313,7 @@ jobs:
       - name: elasticsearch 7
         if: ${{ needs.setup_variables.outputs.app == 'report-service' }}
         run: |
-          docker run -d --name es -p 127.0.0.1:9200:9200 -p 127.0.0.1:9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:7.17.23
+          docker run -d --env ELASTICSEARCH_HOST=127.0.0.1:9200 --env ELASTICSEARCH_INDEX=testreport --name es -p 127.0.0.1:9200:9200 -p 127.0.0.1:9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:7.17.23
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
