--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -314,10 +314,11 @@ jobs:
         if: ${{ needs.setup_variables.outputs.app == 'report-service' }}
         run: |
           docker run -d --env ELASTICSEARCH_HOST=127.0.0.1:9200 --env ELASTICSEARCH_INDEX=testreport --name es -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:7.17.23 --health-cmd="curl http://127.0.0.1:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=5
+          sleep 30
           docker ps -a
           docker logs es
           curl localhost:9200
-          
+
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
