--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -637,6 +637,7 @@ jobs:
           network: host
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.numa-numa-token }}
           github-token: ${{ secrets.numa-numa-token }}
