--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -503,7 +503,7 @@ jobs:
     runs-on: ${{needs.setup_variables.outputs.runners}}
     if: needs.setup_variables.outputs.rebuildManifest == 'true'
     container:
-      image: docker-registry.easir.com/manifest:master-556c68da99302834f54fa29351f524802a8cddf4
+      image: docker-registry.easir.com/manifest:newenvs
       credentials:
         username: ${{secrets.docker-login}}
         password: ${{secrets.docker-pass}}
