--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -446,7 +446,7 @@ jobs:
     needs: setup_variables
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
-    runs-on: ${{needs.setup_variables.outputs.runners}}
+    runs-on: self-hosted #${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
       - name: pull code
@@ -473,6 +473,7 @@ jobs:
       - name: authenticate to composer
         run: |
           echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
+          sleep 300
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
@@ -604,7 +605,7 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
           labels: |
             org.opencontainers.image.source=https://github.com/easir/${{needs.setup_variables.outputs.app}}
-
+            org.opencontainers.image.source https://github.com/OWNER/REPO
       - name: Docker Login
         uses: docker/login-action@v3.0.0
         with:
