--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -460,15 +460,15 @@ jobs:
         run: |
           docker run --rm --name postgres-db -p 5432:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=${{ needs.setup_variables.outputs.app }} -d postgres:13.13
 
-      - uses: shivammathur/setup-php@2.30.2
-        if: inputs.ApplicationLanguage == 'php'
-        with:
-          php-version: ${{inputs.PhpVersion}}
-          extensions: ${{inputs.PhpExtensions}}
-          coverage: pcov
-          tools: composer
-        env:
-          runner: ${{needs.setup_variables.outputs.runners}}
+#      - uses: shivammathur/setup-php@2.30.2
+#        if: inputs.ApplicationLanguage == 'php'
+#        with:
+#          php-version: ${{inputs.PhpVersion}}
+#          extensions: ${{inputs.PhpExtensions}}
+#          coverage: pcov
+#          tools: composer
+#        env:
+#          runner: ${{needs.setup_variables.outputs.runners}}
 
       - name: authenticate to composer
         run: |
