fixing-behat-step

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -156,6 +156,10 @@ on:
         type: boolean
         default: false
         required: false
+      DockerTesting:
+        type: boolean
+        default: false
+        required: false
     secrets:
       token:
         required: true
@@ -460,6 +464,10 @@ jobs:
         run: |
           docker run --rm --name postgres-db -p 5432:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=${{ needs.setup_variables.outputs.app }} -d postgres:13.13
 
+      - name: authenticate to composer
+        run: |
+          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
+
       - uses: shivammathur/setup-php@2.30.2
         if: inputs.ApplicationLanguage == 'php'
         with:
@@ -470,9 +478,6 @@ jobs:
         env:
           runner: ${{needs.setup_variables.outputs.runners}}
 
-      - name: authenticate to composer
-        run: |
-          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
