--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -481,6 +481,7 @@ jobs:
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
+          composer config github-oauth.github.com ${{secrets.numa-numa-token}}
           composer install --prefer-dist --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
 
       - name: lets fire up the app
