--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -481,8 +481,7 @@ jobs:
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
-          composer diagnose
-          composer config github-oauth.github.com ${{secrets.numa-numa-token}}
+          composer config github-oauth.github.com ${{ secrets.token }}
           composer diagnose
           composer install --prefer-dist --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
 
