--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -581,6 +581,11 @@ jobs:
         run: |
           echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
 
+      - name: Add SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.gh-ssh-key }}
+
       - name: Set up Docker Context for Buildx
         id: buildx-context
         run: |
