--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -469,10 +469,10 @@ jobs:
 #          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
 
 #      Workaround failing GH token in composer (Telecom/Vehicle service)
-#      - name: Add SSH key
-#        uses: webfactory/ssh-agent@v0.9.0
-#        with:
-#          ssh-private-key: ${{ secrets.gh-ssh-key }}
+      - name: Add SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.gh-ssh-key }}
 
       - uses: shivammathur/setup-php@v2
         if: inputs.ApplicationLanguage == 'php'
@@ -487,8 +487,6 @@ jobs:
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
-          composer clear-cache
-          composer config github-oauth.github.com ${{ secrets.numa-numa-token }}
           composer install --prefer-dist --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
 
       - name: lets fire up the app
